[gd_scene load_steps=14 format=2]

[ext_resource path="res://World/Buttons.gd" type="Script" id=1]
[ext_resource path="res://Textures/UI/buttons0001.png" type="Texture" id=2]
[ext_resource path="res://Textures/UI/buttons0003.png" type="Texture" id=3]
[ext_resource path="res://Textures/UI/buttons0002.png" type="Texture" id=4]
[ext_resource path="res://Textures/UI/buttons0000.png" type="Texture" id=5]
[ext_resource path="res://Textures/UI/buttons0004.png" type="Texture" id=6]
[ext_resource path="res://Textures/UI/buttons0005.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Hover"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 0.196146, 0.0980733, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1.25, 1.25 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "HoverEnd"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.203063, 0.196146 ),
"update": 0,
"values": [ Vector2( 1.25, 1.25 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Hover"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 0.196146, 0.0980733, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1.25, 1.25 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "HoverEnd"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.203063, 0.196146 ),
"update": 0,
"values": [ Vector2( 1.25, 1.25 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Hover"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 0.196146, 0.0980733, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1.25, 1.25 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "HoverEnd"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.203063, 0.196146 ),
"update": 0,
"values": [ Vector2( 1.25, 1.25 ), Vector2( 1, 1 ) ]
}

[node name="Buttons" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Volume" type="TextureButton" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 48.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 16, 16 )
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Volume"]
anims/Hover = SubResource( 1 )
anims/HoverEnd = SubResource( 2 )

[node name="Music" type="TextureButton" parent="."]
margin_left = 16.0
margin_top = 56.0
margin_right = 48.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 16, 16 )
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Music"]
anims/Hover = SubResource( 3 )
anims/HoverEnd = SubResource( 4 )

[node name="Reset" type="TextureButton" parent="."]
margin_left = 16.0
margin_top = 96.0
margin_right = 48.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 16, 16 )
focus_mode = 0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Reset"]
anims/Hover = SubResource( 5 )
anims/HoverEnd = SubResource( 6 )

[connection signal="mouse_entered" from="Volume" to="." method="_on_Volume_mouse_entered"]
[connection signal="mouse_exited" from="Volume" to="." method="_on_Volume_mouse_exited"]
[connection signal="toggled" from="Volume" to="." method="_on_Volume_toggled"]
[connection signal="mouse_entered" from="Music" to="." method="_on_Music_mouse_entered"]
[connection signal="mouse_exited" from="Music" to="." method="_on_Music_mouse_exited"]
[connection signal="toggled" from="Music" to="." method="_on_Music_toggled"]
[connection signal="mouse_entered" from="Reset" to="." method="_on_Reset_mouse_entered"]
[connection signal="mouse_exited" from="Reset" to="." method="_on_Reset_mouse_exited"]
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
